# panela

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
ejemplo/: servicios_y_edificios.py
panela/: __init__.py  booleano.py  funcion.py  pyproject.toml
panela/servicios_y_edificios/: edificacion.py  servicios.py
tests/: test_booleanos.py  test_funcion.py  test_servicios_y_edificios.py
