[tool.poetry]
name = "panela"
version = "0.1.0"
description = ""
authors = ["akielbowicz <30580760+akielbowicz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
